--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,8 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
+		  Dr. Steven Pellizzeri<br />
 		  Physical Sciences Building, Eastern Illinois University<br />
-		  Steven Pellizzeri<br />
 		  600 Lincoln Avenue<br />
 		  Charleston, IL 61920 <br />
             </div>
