--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<figure class="img-responsive center-block">
+  <center><img src="{{ site.url }}{{ site.baseurl }}/images/logopic/DRPwords.png" style="width: 160px"></center>
+</figure>
+
   <div id="homeid" class="col-sm-8">
         <h1>Welcome to the Pellizzeri Lab</h1>
 
