--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,18 +3,19 @@
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-4">
-			
+
 		  <p>&copy 2019 Pellizzeri Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
               <p>We are part of the <a href="https://www.eiu.edu/eiuchem/">Department OF Chemistry AND Biochemistry</a> at <a href="https://www.eiu.edu">Eastern Illinois University</a>.</p>
-            
+
 
 		   <p>  </p><p>
-            		  
-            
+
+
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
-		  - <a href='https://www.eiu.edu'>EIU starting funds</a>
+		  - <a href='https://www.eiu.edu'>EIU starting funds, </a>
+      - <a href='https://www.acs.org/content/acs/en/funding/grants/petroleum-research-fund.html'>ACS Petroleum Research Fund grant (PRF#65913-UNI6), </a>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
